kubernetes/yml/volos/icom/ingress/dtm-ingress-volos.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dtm
  namespace: simavi  
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sphinx-toolkit.intracom-telecom.com
    http:
      paths:
      - path: /sphinx/dtm
        backend:
          serviceName: dtm-service 
          servicePort: 8087
