kubernetes/yml/volos/icom/ingress/id-ui-ingress-volos.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id-ui
  namespace: pilot  
spec:
  rules:
  - host: sphinx-toolkit.intracom-telecom.com
    http:
      paths:
      - path: /id-ui
        backend:
          serviceName: ui-service 
          servicePort: 80
